# PBSexercise

./: .gitignore  README.md
Ex1/: Exercise.cpp  Makefile  Scene.cpp  Vec2.h
Ex2/: Exercise2.vcproj  FEMElementTri.cpp  MeshViewer.h  SimpleFEM.cpp  SimpleFEM.h  SimpleFEMDefs.h
Ex3/: Makefile  exercise.cpp  fluid2d.cpp  fluid2d.h  gauss_seidel.h  main.cpp  pbssolver.sln  pbssolver.vcproj  solver.h  util.h
ex02/: CMakeLists.txt  Exercise2.sln  Exercise2.vcproj  FEMElementTri.cpp  FEMElementTri.h  FEMMesh.h  Makefile  MeshViewer.cpp  Readme.txt  SimpleFEM.cpp  generateBuildWindows.bat  utilities.h
ex03/: exercise.cpp
